Fix ExpressJS image going out of bounds

--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -201,7 +201,7 @@ div.info {
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
-  max-height: 140px;
+  max-height: 120px;
   height: auto;
   width: auto;
 }
